# encryptor

./: .gitignore  README.md  encryptor.py  pyproject.toml
encryptor/: encrypter_interface.py  key_manager.py  main.py  static_tools.py  utils.py
encryptor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
encryptor/encryptors/: __init__.py  fernet_expanded.py
