[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "encryptor"
description = "File encryption tool"
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "mi2354" },
]
dependencies = ["click", "cryptography"]
dynamic = ["version"]

[tool.setuptools]
packages.find.include = ["encryptor*"]
dynamic.version.attr = "encryptor.__version__"

[project.scripts]
encryptor = "encryptor.main:cli"

[tool.black]
line-length = 99

[tool.ruff]
target-version = "py310"

select = [
    "A", # Shadowing builtins
    "C", # flake8 rules
    "E", # Pycodestyle rules
    "F", # Py flakes
    "I", # isort rules
    "S", # Bandit rules
    "W", # Pycodestyle rules
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 99

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"tests/*" = []